history function finished
