# public-transport-rest/src/main/java/ptc/springframework/publictransportrest/enums/TicketHistoryType.java
@@ -1,7 +1,0 @@
-package ptc.springframework.publictransportrest.enums;
-
-public enum TicketHistoryType {
-    PURCHASE,
-    REFUND,
-    VALIDATE
-}
